package transportes;
import trayectos.Punto;

public interface Transporte {

  public double getDistancia(Punto puntoInicio, Punto puntoFin);

}
